# rl-run-preflight

./: .gitignore  README.md  pyproject.toml
examples/: intellect-style-grpo.yaml  overflow-risk.yaml
site/: app.js  index.html  styles.css
site/assets/receipts/: latest
site/assets/receipts/demo-fail/: manifest.json  report.md  summary.json
site/assets/receipts/demo-pass/: manifest.json  report.md  summary.json
src/rl_preflight/: __init__.py  checks.py  cli.py  config.py  numerics.py  plan.py  receipt.py  report.py  run.py
tests/: test_preflight.py
